# rusty-keys

./: Cargo.toml  README.md  rusty-keys.drawio
rusty-keys-cli/: Cargo.toml
rusty-keys-cli/src/: main.rs
rusty-keys-daemon/: Cargo.toml
rusty-keys-gui/: Cargo.toml
rusty-keys-gui/src/: main.rs
rusty-keys-ipc/: Cargo.toml  build.rs
rusty-keys-ipc/src/: auth.rs  ipc_messages.proto  lib.rs
